--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   
 
     </div>
-    <!-- Image Grid -->
 <div class="imgcontainer">
   <img src="/imgs/portfoliogif.gif">
 
@@ -28,7 +27,7 @@
 <h3 style="padding-top:0;">Let's Get in Touch!</h3>
 <div class="flexcontainer">
   <ul>
-    <li><a href="https://www.linkedin.com/in/josh-phillips-31b807137" target="_blank">Linkedin</a></li>
+    <li><a href="https://www.linkedin.com/in/joshuarphillips" target="_blank">Linkedin</a></li>
     <li><a href="mailto:hello@joshrp.com">Email</a></li>
 </ul>
 
