--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="flexcontainer">
   <ul>
     <li><a href="https://www.linkedin.com/in/joshuarphillips" target="_blank">Linkedin</a></li>
-    <li><a href="mailto:hello@joshrp.com">Email</a></li>
+    <li><a href="mailto:joshphillipsdesign@gmail.com">Email</a></li>
 </ul>
 
 <ul>
