--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <h3 style="padding-top:0;">Let's Get in Touch!</h3>
 <div class="flexcontainer">
   <ul>
+    <li><a href="/imgs/JoshPhillips-Resume.pdf" target="_blank">Resume</a></li>
     <li><a href="https://www.linkedin.com/in/joshuarphillips" target="_blank">Linkedin</a></li>
     <li><a href="mailto:joshphillipsdesign@gmail.com">Email</a></li>
 </ul>
