--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <h3 style="padding-top:0;">Let's Get in Touch!</h3>
 <div class="flexcontainer">
   <ul>
-    <li><a href="/imgs/JoshPhillips-Resume.pdf" target="_blank">Resume</a></li>
+    <li><a href="/imgs/Josh_Phillips_Resume.pdf" target="_blank">Resume</a></li>
     <li><a href="https://www.linkedin.com/in/joshuarphillips" target="_blank">Linkedin</a></li>
     <li><a href="mailto:joshphillipsdesign@gmail.com">Email</a></li>
 </ul>
 
 <ul>
-    <li><strong>© 2022</strong></li>
+    <li><strong>© 2022-2024</strong></li>
     <li>CURRENTLY BASED IN LAFAYETTE, LA</li>
 </ul>
 
